get roles, fix doc, add flexible expires time for tokens in .env
